test_data/streamwalk/invalid/strings/01_invalid_escape.case
# OPTIONS

MODE: AJIS
COMMENTS: off
DIRECTIVES: off
IDENTIFIERS: off
MAX_DEPTH: 64
MAX_TOKEN_BYTES: 1048576

# INPUT

{"s":"a\q"}

# EXPECTED

BEGIN_OBJECT
PROPERTY_NAME s
ERROR InvalidEscapeSequence offset=8
